Fix item value for the first item of each category while adding items in your bazaar on mobile.

--- a/extension/scripts/features/item-values/ttItemValues.css
+++ b/extension/scripts/features/item-values/ttItemValues.css
@@ -86,3 +86,7 @@ body.tt-tablet .items-cont .qty {
 .thumbnails .tt-item-price-wrap {
 	display: block !important;
 }
+
+body.tt-mobile #bazaarRoot .tt-item-price-wrap {
+	margin-bottom: 1px;
+}
